--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: set custom edit URLs
         shell: python
         run: |
-          import os
+          import glob
           for filename in glob.iglob('docs/*.md', recursive=True):
             if file.endswith('.md'):
               new_line = '---\ncustom_edit_url: https://github.com/pyrsia/pyrsia/edit/main/docs/{}\n---\n\n'.format(file)
