--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,13 +36,12 @@ jobs:
         shell: python
         run: |
           import glob
-          for filename in glob.iglob('docs/*.md', recursive=True):
-            if file.endswith('.md'):
-              new_line = '---\ncustom_edit_url: https://github.com/pyrsia/pyrsia/edit/main/docs/{}\n---\n\n'.format(file)
-              with open(file, 'r+') as file:
-                content = file.read()
-                file.seek(0)
-                file.write(new_line + content)
+          for file in glob.iglob('docs/*.md', recursive=True):
+            new_line = '---\ncustom_edit_url: https://github.com/pyrsia/pyrsia/edit/main/docs/{}\n---\n\n'.format(file)
+            with open(file, 'r+') as file:
+              content = file.read()
+              file.seek(0)
+              file.write(new_line + content)
       - uses: actions/upload-artifact@v2
         with:
           name: devs-files
