--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         shell: python
         run: |
           import glob
-          for file in glob.iglob('docs/*.md', recursive=True):
+          for file in glob.iglob('docs/**/*.md', recursive=True):
             new_line = '---\ncustom_edit_url: https://github.com/pyrsia/pyrsia/edit/main/{}\n---\n\n'.format(file)
             with open(file, 'r+') as file:
               content = file.read()
